lib_LTLIBRARIES = libbrainslug.la
AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/../Contrib/cajun $(BOOST_CPPFLAGS)
libbrainslug_la_SOURCES = FrontendServer.cpp \
	MoviesResourceHandler.cpp \
	TVShowsResourceHandler.cpp \
	MoviesTestDB.cpp \
	TVShowsTestDB.cpp \
	ResourceHandler.cpp \
	TestDB.cpp \
	SeasonsTestDB.cpp \
	SeasonsResourceHandler.cpp \
	SQLiteDB.cpp \
	MovieSourcesResourceHandler.cpp \
	EpisodesResourceHandler.cpp \
	FileScanner.cpp
